public/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

body {
    background-color: #232428;
    width: 100svw;
    height: 100svh;
    color: #bcbec2;
    margin: 0;
    padding: 0;
    font-family: "Noto Sans", "Noto Color Emoji", sans-serif;
    font-size: 15px;
    font-weight: 500;
    display: flex;
}

#bodywrap {
    width: 70vw;
    height: 100vh
}

textarea,
input,
select,
button {
    font-family: "Noto Sans", "Noto Color Emoji", sans-serif;
}


::-webkit-scrollbar {
    width: 12px;
    scrollbar-gutter: stable;
    /* border: 5px solid #313338; */
}

::-webkit-scrollbar-track {
    background-color: #2c2d31;
    border: 3px solid #313338;
    margin-top: 5px;
    margin-bottom: 5px;

    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    background-color: #1e1f23;
    border-radius: 10px;
    background-clip: content-box;
    border: 3px solid transparent;
    min-height: 40px;
}

.spanner15vw {
    width: 15vw;
}

#contentWrap {
    max-height: calc(100svh - 3em);
}

#chatWrap {
    position: relative;
    max-height: 100%;
    overflow-y: auto;
}

#rightWrap {
    width: 70%;
}

#universalControls {
    position: relative;
    width: 100%;
    height: 3em;
}

#universalControls>div {
    gap: 1em
}

#LLMChatWrapper,
#OOCChatWrapper {
    height: 100%;
    overflow: hidden;
    position: relative;
    background: #313338;
    border-radius: 10px;
    padding: 5px;
}

#inputBlock,
#AIInputBlock {
    display: flex;
    align-items: center;
    align-content: center;
    justify-content: center;
    background-color: #313338;
    border-radius: 0 0 10px 10px;
}

.inputAndIconsWrapper {
    border-radius: 10px;
    margin: 5px;
    background-color: #393a3f;
    width: 100%;
}

#controlPanel {
    max-width: 15vw;
    width: 15vw;
    /* min-width: 200px; */
    background-color: #2c2d31;
    /* margin-right: 5px; */
    /* border-radius: 0 10px 10px 0; */
    height: 100vh;
    max-height: 100vw;
    overflow-y: auto;
    overflow-x: hidden;
}

#controlPanel h4,
#userListsWrap h4 {
    margin: 5px 0;
    font-size: 1.25em;
    text-align: center;
}

#controlPanel span {
    font-size: 0.8em;
}


#AIConfigBlock,
#pastChatsBlock {
    flex-shrink: 0;
}

#insertionsBlock:not(.minimized) {
    flex-grow: 1;
    min-height: 0;
    flex-shrink: 0;
}

#insertionsBlock.minimized {
    flex-grow: 0;
    min-height: 0;
}

input,
textarea,
button,
select,
.nonButtonButton {
    border-radius: 5px;
    border: 0;
    background-color: #393a3f;
    color: #afb1b6;
    outline: none;

    z-index: 2;
}

#finalInstructionBlock,
#systemPromptBlock,
#authorsNoteBlock {
    flex-grow: 1;
    min-height: 0;
}

#controlPanel textarea {
    /* height: 100% */
    flex-grow: 1;
    min-height: 0;
    /* allows it to shrink below content size */
    resize: none;
    /* optional: disables manual resizing */
    width: 100%;
    /* ensures full width */
    box-sizing: border-box;
    /* padding won't expand width/height */
}

#promptConfigTextFields {
    flex: 1;
    overflow-y: auto;
    min-height: 0;
}


button,
select,
.nonButtonButton,
.messageButton {
    cursor: pointer;
}

button,
select,
input,
.nonButtonButton {
    transition: all 250ms;
}

textarea {
    transition: background-color 250ms;
}

select {
    font-size: 0.8em;
    appearance: none;
    padding: 3px 1em 3px 3px;
    width: fit-content;
    /* min-width: 50px; */
    display: flex;
    max-width: 200px;
}

select:hover:not(:disabled),
.pastChatItem:hover {
    background-color: #52545b;
}

.hostControls {
    display: none !important
}

.positionAbsolute {
    position: absolute;
}

.positionRelative {
    position: relative;
}

.custom-select {
    display: flex;
    justify-content: right;
    position: relative;
    z-index: 3;
    width: fit-content;
    max-width: 200px;
}

.chatTrash {
    top: 0;
    right: 0;
    background: transparent;
}

.custom-select::before,
.custom-select::after {
    --size: 0.3rem;
    content: "";
    position: absolute;
    right: 3px;
    top: 3px;
    pointer-events: none;
    z-index: 3;
}

.custom-select::before {
    border-left: var(--size) solid transparent;
    border-right: var(--size) solid transparent;
    border-bottom: var(--size) solid #888;
    top: 25%;
}

.custom-select::after {
    border-left: var(--size) solid transparent;
    border-right: var(--size) solid transparent;
    border-top: var(--size) solid #888;
    top: 50%;
}

#modelList {
    max-width: 200px;
}

/*CHECKBOXES*/
input[type='checkbox'] {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    /* outline: 1px solid #666; */
    position: relative;
    width: 1.5em;
    height: 1.5em;
    overflow: hidden;
    border-radius: 3px;
    /* border: 1px solid #666; */
    background-color: #343437;
    /* another weird color mismatch cope */
    box-shadow: inset 0 0 2px 0 rgba(0, 0, 0, 0.5);
    cursor: pointer;
    transform: translateY(-0.075em);
    flex-shrink: 0;
    place-content: center;
    filter: brightness(1.2);
}

input[type='checkbox'] {
    display: grid;
}

input[type="checkbox"]::before {
    content: "";
    width: 1em;
    height: 1em;
    transform: scale(0);
    transition: 120ms transform ease-in-out;
    box-shadow: inset 1em 1em #888;
    transform-origin: bottom left;
    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
}

input[type="checkbox"]:checked::before {
    transform: scale(1);
}

input[type='checkbox']:hover {
    filter: brightness(1.5);
}

.checkbox_label {
    display: flex;
    flex-direction: row;
    column-gap: 5px;
    align-items: baseline;
}

button,
input,
.nonButtonButton {
    padding: 3px;
    width: fit-content;
}

.scrollY {
    overflow-y: auto;
}

.hoverglow {
    transition: all 250ms;
    outline: 1px solid #666;
    filter: saturate(0.5);

}

.messageTime {
    font-size: 0.8em;
    margin-left: 5px;
    color: #888;
    font-weight: 400;
}
/* ... */

